syntax = "proto3";

package user;

option go_package = "github.com/yourusername/user-service/proto";

service UserService {
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse);
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByIdResponse {
    User user = 1;
}

message GetUserOrdersRequest {
    int32 user_id = 1;
}

message GetUserOrdersResponse {
    repeated Order orders = 1;
}

message User {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}

message Order {
    int32 order_id = 1;
    int32 book_id = 2;
    string status = 3;
}